--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "chart.js": "^4.1.2",
+    "cors": "^2.8.5",
     "ng2-charts": "^4.1.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.20",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
